--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -9,6 +9,22 @@ html(lang='en')
     link(rel='stylesheet', href='/vendor/bootstrap/dist/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body(role='document')
+    .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+      .container
+        .navbar-header
+          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          a.navbar-brand(href='/admin') Base App Admin
+        .navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li.active
+              a(href='/admin') Admin
+            li
+              a(href='/admin/users') Users
+
     block content
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
