--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -13,10 +13,10 @@ html(lang='en')
       .container
         .navbar-header
           button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
           a.navbar-brand(href='/admin') Base App Admin
         .navbar-collapse.collapse
           ul.nav.navbar-nav
