--- a/views/index.jade
+++ b/views/index.jade
@@ -4,3 +4,5 @@ block content
   .container
     h1= title
     p Welcome to #{title}
+
+    p This is the page that is rendered after a user logs in.
