Make it so we can fetch the list of users to render the user list in the admin section

--- a/views/admin/users/index.jade
+++ b/views/admin/users/index.jade
@@ -13,3 +13,8 @@ block content
           th Surname
           th
       tbody
+        - each user in users
+          tr
+            td= user.username
+            td= user.firstname
+            td= user.surname
